--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -85,4 +85,8 @@
 	{% endif %}
 </section>
 
+<form method="POST" action="{{ url_for('delete_venue', venue_id=venue.id) }}">
+<input class="btn" type="submit" name="delete" value="Delete">
+</form>
+
 {% endblock %}
