--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -15,10 +15,14 @@
         {{ form.venue_id(id='venue_id', class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
+        <label for="name">Show Name</label>
+        {{ form.name(id='name', class_ = 'form-control', autofocus = true) }}
+      </div>
+      <div class="form-group">
           <label for="start_time">Start Time</label>
           {{ form.start_time(id='start_time', class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
         </div>
-      <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+      <input type="submit" value="Create Show" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
 {% endblock %}
