--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -45,15 +45,16 @@
 </div>
 <section>
 
-		{% if artist.upcoming_shows == 0 %}
+		{% if artist.upcoming_shows_count == 0 %}
 	<h2 class="monospace">No upcoming shows</h2>
+	  {% else %}
 	<h2 class="monospace">{{ artist.upcoming_shows_count }} Upcoming {% if artist.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in artist.upcoming_shows %}
+		{%for show in upcoming_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+				<img src="{{ show['image_link'] }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show.venue_id }}">{{ show['venue_name'] }}</a></h5>
 				<h6>{{ show.start_time|datetime('full') }}</h6>
 			</div>
 		</div>
@@ -62,20 +63,21 @@
 	{% endif %}
 </section>
 <section>
-	{% if artist.past_shows == 0 %}
-<h2 class="monospace">No upcoming shows</h2>
-	<h2 class="monospace">{{ artist.past_shows_count }} Past {% if artist.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+	{% if artist.past_show_count == 0 %}
+<h2 class="monospace">No Past shows</h2>
+  {% else %}
+	<h2 class="monospace">{{ artist.past_show_count }} Past {% if artist.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 	<div class="row">
-		{%for show in artist.past_shows %}
+		{%for show in past_shows %}
 		<div class="col-sm-4">
 			<div class="tile tile-show">
-				<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-				<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+				<img src="{{ show['image_link'] }}" alt="Show Venue Image" />
+				<h5><a href="/venues/{{ show['venue_id'] }}">{{ show['venue_name'] }}</a></h5>
 				<h6>{{ show.start_time|datetime('full') }}</h6>
 			</div>
 		</div>
 		{% endfor %}
-	</div>
+		</div>
 	{% endif %}
 </section>
 
