--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -52,11 +52,11 @@
 	{% else %}
 			<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 			<div class="row">
-				{%for show in venue.upcoming_shows %}
+				{%for show in upcoming_shows %}
 				<div class="col-sm-4">
 					<div class="tile tile-show">
-						<img src="{{ show.artist_image_link }}" alt="Show Artist Image" />
-						<h5><a href="/artists/{{ show.artist_id }}">{{ show.artist_name }}</a></h5>
+						<img src="{{ show['image_link'] }}" alt="Show Artist Image" />
+						<h5><a href="/artists/{{ show['artist_id'] }}">{{ artist.name }}</a></h5>
 						<h6>{{ show.start_time|datetime('full') }}</h6>
 					</div>
 				</div>
@@ -67,16 +67,16 @@
 
 <section>
 
-		{% if venue.upcoming_shows_count == 0 %}
-	<h2 class="monospace">No upcoming shows</h2>
+		{% if venue.past_shows_count == 0 %}
+	<h2 class="monospace">No past shows</h2>
 	 {% else %}
-		<h2 class="monospace">{{ venue.upcoming_shows_count }} Upcoming {% if venue.upcoming_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
+		<h2 class="monospace">{{ venue.past_shows_count }} Past {% if venue.past_shows_count == 1 %}Show{% else %}Shows{% endif %}</h2>
 		<div class="row">
-			{%for show in venue.upcoming_shows %}
+			{%for show in past_shows %}
 			<div class="col-sm-4">
 				<div class="tile tile-show">
-					<img src="{{ show.venue_image_link }}" alt="Show Venue Image" />
-					<h5><a href="/venues/{{ show.venue_id }}">{{ show.venue_name }}</a></h5>
+					<img src="{{ show['image_link'] }}" alt="Show Venue Image" />
+					<h5><a href="/venues/{{ show['venue_id'] }}">{{ show['venue_name'] }}</a></h5>
 					<h6>{{ show.start_time|datetime('full') }}</h6>
 				</div>
 			</div>
