--- a/templates/pages/show_venue.html
+++ b/templates/pages/show_venue.html
@@ -56,7 +56,7 @@
 				<div class="col-sm-4">
 					<div class="tile tile-show">
 						<img src="{{ show['image_link'] }}" alt="Show Artist Image" />
-						<h5><a href="/artists/{{ show['artist_id'] }}">{{ artist.name }}</a></h5>
+						<h5><a href="/artists/{{ show['artist_id'] }}">{{ show['artist_name'] }}</a></h5>
 						<h6>{{ show.start_time|datetime('full') }}</h6>
 					</div>
 				</div>
@@ -76,7 +76,7 @@
 			<div class="col-sm-4">
 				<div class="tile tile-show">
 					<img src="{{ show['image_link'] }}" alt="Show Venue Image" />
-					<h5><a href="/venues/{{ show['venue_id'] }}">{{ show['venue_name'] }}</a></h5>
+					<h5><a href="/venues/{{ show['artist_id'] }}">{{ show['artist_name'] }}</a></h5>
 					<h6>{{ show.start_time|datetime('full') }}</h6>
 				</div>
 			</div>
