--- a/templates/forms/new_artist.html
+++ b/templates/forms/new_artist.html
@@ -28,13 +28,26 @@
         <small>Ctrl+Click to select multiple</small>
         {{ form.genres(id='genres',class_ = 'form-control', placeholder='Genres, separated by commas',  autofocus = true) }}
       </div>
+      <div class="form-group">
+        <label for="seeking_description">Seeking Description</label>
+        {{ form.seeking_description(id='seeking_description',class_ = 'form-control', autofocus = true) }}
+      </div>
       <div  class="form-group">
         <label for="image_link">Image Link</label>
         {{ form.image_link(id='image_link', class_ = 'form-control', autofocus = true) }}
       </div>
       <div class="form-group">
+          <label for="website_link">Website Link</label>
+          {{ form.website_link(id='website_link',class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+      <div class="form-group">
           <label for="facebook_link">Facebook Link</label>
           {{ form.facebook_link(id='facebook_link',class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+         <div class="form-group">
+         <label for = "name"> Seeking Venue? </label>
+        <input type="radio" name="seeking_venue" value="Yes"> Yes </input>
+        <input type="radio" name="seeking_venue" value="No"> No </input>
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
