--- a/templates/pages/show_artist.html
+++ b/templates/pages/show_artist.html
@@ -80,5 +80,7 @@
 		</div>
 	{% endif %}
 </section>
-
+<form method="POST" action="{{ url_for('delete_artist', artist_id=artist.id) }}">
+	<input class="btn" type="submit" name="delete" value="Delete">
+	</form>
 {% endblock %}
